Parte final do projeto

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
 	<title>Ravelar</title>
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink&family=Montserrat&display=swap"
+		rel="stylesheet">
 </head>
 
 <body>
@@ -24,11 +27,12 @@
 		</div>
 	</header>
 
-	<img id="banner" src="banner5.jpg" alt="Banner da loja Ravelar">
+	<img class="banner" src="banner5.jpg" alt="Banner da loja Ravelar">
 
 	<main>
 		<section class="principal">
-			<h2 class="titulo-centralizado">Sobre a Ravelar</h2>
+			<h2 class="titulo-principal">Sobre a Ravelar</h2>
+			<img class="furniture" src="furniture.jpg" alt="Móveis diversos">
 
 			<p>Localizada no coração da cidade a <strong>Ravelar</strong> traz para o mercado o que há de melhor em
 				móveis e
@@ -46,16 +50,39 @@
 			</p>
 		</section>
 
-		<section class="beneficios">
-			<h3 class="titulo-centralizado"> Benefícios</h3>
+		<section class="mapa">
+			<h3 class="titulo-principal">Nosso estabelecimento</h3>
+			<p>Ficaremos muito felizes em receber sua visita.</p>
 
-			<ul>
-				<li class="itens">Atendimento aos clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais qualificados</li>
-			</ul>
-			<img src="beneficios.jpg" class="imagembeneficios">
+			<div class="mapa-conteudo"><iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3660.558196340643!2d-46.790312985588834!3d-23.44032156301736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cefd02fc70c285%3A0xc9e7b85ce5422b6!2sMorro%20Doce%20-%20Anhanguera%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2002675-031!5e0!3m2!1spt-BR!2sbr!4v1664240702247!5m2!1spt-BR!2sbr"
+				width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+				referrerpolicy="no-referrer-when-downgrade">
+			</iframe>
+			</div>
+
+		</section>
+
+		<section class="beneficios">
+			<h3 class="titulo-principal"> Benefícios</h3>
+
+			<div class="conteudo-beneficios">
+				<ul class="lista-beneficios">
+					<li class="itens">Atendimento aos clientes</li>
+					<li class="itens">Espaço diferenciado</li>
+					<li class="itens">Localização</li>
+					<li class="itens">Profissionais qualificados</li>
+					<li class="itens">Pontualidade</li>
+					<li class="itens">Limpeza</li>
+				</ul><img src="beneficios.jpg" class="imagem-beneficios">
+			</div>
+			<div class="video">
+				<iframe width="100%" height="315" src="https://www.youtube.com/embed/AMjzZGVeNbQ?start=11"
+					title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen>
+				</iframe>
+			</div>
 		</section>
 </body>
 </main>
