--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,7 @@
     <title>Produtos - Ravelar</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,21 +29,21 @@
         <ul class="produtos">
             <li>
                 <h2>Móveis</h2>
-                <img class ="itens" src="moveis.png">
+                <img class ="itens-produtos" src="moveis.png">
                 <p class="produto-descricao">Descubra nossos móveis incríveis e estilosos</p>
                 <p class="produto-preco">A partir de R$70,00</p>
             </li>
 
             <li>
                 <h2>Eletrodomésticos</h2>
-                <img class ="itens" src="eletrodomesticos.png">
+                <img class ="itens-produtos" src="eletrodomesticos.png">
                 <p class="produto-descricao">Conheça os melhores eletrodomésticos</p>
                 <p class="produto-preco">A partir de R$110,00</p>
             </li>
 
             <li>
                 <h2>Acessórios</h2>
-                <img class ="itens" src="acessorios.png">
+                <img class ="itens-produtos" src="acessorios.png">
                 <p class="produto-descricao">Encontre acessórios funcionais e estilosos</p>
                 <p class="produto-preco">A partir de R$2,50</p>
             </li>
