--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <title>Contato - Ravelar</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
